# shrs_ollama

./: Cargo.toml
examples/: basic.rs
src/: lib.rs  request.rs
