[package]
name = "shrs_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
reqwest = {version="0.11.22", features = ["blocking", "json"]}
serde = "1.0.193"
serde_json = "1.0.108"
shrs = {git = "https://github.com/MrPicklePinosaur/shrs"}
shrs_output_capture = {git = "https://github.com/MrPicklePinosaur/shrs"}
shrs_mux = {git = "https://github.com/MrPicklePinosaur/shrs"}
derive_more = "0.99.17"

